@@ -1,3 +1,8 @@
+2000-09-01  Bruno Haible  <haible@clisp.cons.org>
+
+        * eval.d (interpret_bytecode_): Don't produce "testb %edx,%edx" or
+          "testb %eax,%eax" any more.
+
 2000-08-19  Bruno Haible  <haible@clisp.cons.org>
 
         * utils/ccpaux.c: main() returns int. Call fflush(stdout) before
